--- a/fbiPy.ipynb
+++ b/fbiPy.ipynb
@@ -40,6 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Functions\n",
+    "\n",
     "def Mbox(title, text, style):\n",
     "    return ctypes.windll.user32.MessageBoxW(0, text, title, style)\n",
     "\n",
