cleaned pop density and median income

--- a/crimePy.ipynb
+++ b/crimePy.ipynb
@@ -1175,6 +1175,123 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#adding population density\n",
+    "# first call the URL, no key needed\n",
+    "response = requests.get(f'https://api.census.gov/data/2019/pep/population?get=DENSITY,POP,NAME&for=county:*').json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# locate the first row and make it the column name and then drop row 0\n",
+    "county_dens = pd.DataFrame(response)\n",
+    "county_dens.columns = county_dens.iloc[0]\n",
+    "county_dens = county_dens.drop([0])\n",
+    "county_dens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete and null info and reset the index\n",
+    "county_dens = county_dens.dropna(how='any')\n",
+    "county_dens.reset_index()\n",
+    "county_dens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create new columns for County and State\n",
+    "county_dens['County Name'] = county_dens['NAME'].str.split(',').apply(lambda x: x[0])\n",
+    "county_dens['State Name'] = county_dens['NAME'].str.split(',').apply(lambda x: x[-1])\n",
+    "county_dens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding median income per county\n",
+    "response = requests.get(\"https://api.census.gov/data/2019/acs/acs1?get=NAME,B06011_001E&for=county:*\").json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "income = pd.DataFrame(response)\n",
+    "income"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#replace the intiger column names with values in row 0 and convert variable B06011_001E to Median Income\n",
+    "income.columns = income.iloc[0]\n",
+    "incomes = income.drop([0])\n",
+    "incomes.reset_index()\n",
+    "incomes.rename(columns={\"B06011_001E\": \"Median Income\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "incomes = incomes.dropna(how='any')\n",
+    "incomes.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the code in line 2 drops the \"county\" fin the name. We might find one process more usefull than the other later on.\n",
+    "incomes[\"County Name\"] = incomes.NAME.str.split('\\s+').str[0]\n",
+    "incomes['State Name'] = incomes['NAME'].str.split(',').apply(lambda x: x[-1])\n",
+    "incomes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1236,7 +1353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
