new file for resource data

--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Project #1 Juypter Notebook\n",
     "# Created by Melinda Eudy, Cameron Farquhar, Markita Francis, Luis Rojas, Kelly Rose\n",
-    "# Project :"
+    "# Project : 2019 Crime Data Used from several resources ---UCR Crime Rates by County, US Census, and "
    ]
   },
   {
