--- a/Project_1_Final.ipynb
+++ b/Project_1_Final.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "      <td>29</td>\n",
        "      <td>510</td>\n",
        "      <td>318416</td>\n",
-       "      <td>1792</td>\n",
+       "      <td>1791.995377</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -113,7 +113,7 @@
        "      <td>5</td>\n",
        "      <td>35</td>\n",
        "      <td>49746</td>\n",
-       "      <td>1755</td>\n",
+       "      <td>1754.914968</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -137,7 +137,7 @@
        "      <td>17</td>\n",
        "      <td>3</td>\n",
        "      <td>7629</td>\n",
-       "      <td>1665</td>\n",
+       "      <td>1664.700485</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -161,7 +161,7 @@
        "      <td>48</td>\n",
        "      <td>261</td>\n",
        "      <td>412</td>\n",
-       "      <td>1456</td>\n",
+       "      <td>1456.310680</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -185,7 +185,7 @@
        "      <td>22</td>\n",
        "      <td>31</td>\n",
        "      <td>27083</td>\n",
-       "      <td>1447</td>\n",
+       "      <td>1447.402430</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -211,11 +211,11 @@
       ],
       "text/plain": [
        "   FIPS_ST  FIPS_CTY  population  crime_rate_per_100000  index  EDITION  PART  \\\n",
-       "0       29       510      318416                   1792      1        1     4   \n",
-       "1        5        35       49746                   1755      2        1     4   \n",
-       "2       17         3        7629                   1665      3        1     4   \n",
-       "3       48       261         412                   1456      4        1     4   \n",
-       "4       22        31       27083                   1447      5        1     4   \n",
+       "0       29       510      318416            1791.995377      1        1     4   \n",
+       "1        5        35       49746            1754.914968      2        1     4   \n",
+       "2       17         3        7629            1664.700485      3        1     4   \n",
+       "3       48       261         412            1456.310680      4        1     4   \n",
+       "4       22        31       27083            1447.402430      5        1     4   \n",
        "\n",
        "   IDNO  CPOPARST  CPOPCRIM  ...  INDEX  MODINDX  MURDER  RAPE  ROBBERY  \\\n",
        "0  1612    318667    318667  ...   5706    22329     119   200     1778   \n",
@@ -234,7 +234,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "      <td>29</td>\n",
        "      <td>510</td>\n",
        "      <td>318416</td>\n",
-       "      <td>1792</td>\n",
+       "      <td>1791.995377</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -329,7 +329,7 @@
        "      <td>5</td>\n",
        "      <td>035</td>\n",
        "      <td>49746</td>\n",
-       "      <td>1755</td>\n",
+       "      <td>1754.914968</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -353,7 +353,7 @@
        "      <td>17</td>\n",
        "      <td>003</td>\n",
        "      <td>7629</td>\n",
-       "      <td>1665</td>\n",
+       "      <td>1664.700485</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -377,7 +377,7 @@
        "      <td>48</td>\n",
        "      <td>261</td>\n",
        "      <td>412</td>\n",
-       "      <td>1456</td>\n",
+       "      <td>1456.310680</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -401,7 +401,7 @@
        "      <td>22</td>\n",
        "      <td>031</td>\n",
        "      <td>27083</td>\n",
-       "      <td>1447</td>\n",
+       "      <td>1447.402430</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
@@ -427,11 +427,11 @@
       ],
       "text/plain": [
        "  FIPS_ST FIPS_CTY  population  crime_rate_per_100000  index  EDITION  PART  \\\n",
-       "0      29      510      318416                   1792      1        1     4   \n",
-       "1       5      035       49746                   1755      2        1     4   \n",
-       "2      17      003        7629                   1665      3        1     4   \n",
-       "3      48      261         412                   1456      4        1     4   \n",
-       "4      22      031       27083                   1447      5        1     4   \n",
+       "0      29      510      318416            1791.995377      1        1     4   \n",
+       "1       5      035       49746            1754.914968      2        1     4   \n",
+       "2      17      003        7629            1664.700485      3        1     4   \n",
+       "3      48      261         412            1456.310680      4        1     4   \n",
+       "4      22      031       27083            1447.402430      5        1     4   \n",
        "\n",
        "   IDNO  CPOPARST  CPOPCRIM  ...  MODINDX  MURDER  RAPE  ROBBERY  AGASSLT  \\\n",
        "0  1612    318667    318667  ...    22329     119   200     1778     3609   \n",
@@ -450,7 +450,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "4     4       17      368      149      494       60      0  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "4  Alabama  1009   Blount"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
        "14      178        8      2  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "6   Etowah County, Alabama       19861    01    055"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
        "6          19861   Etowah  Alabama"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1630,7 @@
        "34     2380      184     18  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1741,7 @@
        "5  112.62558771  82755    01    01    043  01043"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1841,7 +1841,7 @@
        "5      113  82755  1043"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2276,7 @@
        "5           18            32  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2297,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2382,7 @@
        "67           County      Texas  WASHINGTON        30        -96"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2610,7 +2610,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2628,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2806,7 +2806,7 @@
        "115          0             0            11  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2825,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2855,10 +2855,10 @@
        "      <th>POPULATION</th>\n",
        "      <th>DENSITY</th>\n",
        "      <th>MEDIAN INCOME</th>\n",
+       "      <th>CRIME TYPE</th>\n",
        "      <th>CRIME RATE PER 100k</th>\n",
        "      <th>COUNTY POP - AGENCY REPORTING ARRESTS</th>\n",
        "      <th>COUNTY POP - AGENCY REPORTING CRIME</th>\n",
-       "      <th># COUNTY AGENCY REPORTING ARREST</th>\n",
        "      <th>...</th>\n",
        "      <th>RAPE</th>\n",
        "      <th>ROBBERY</th>\n",
@@ -2881,10 +2881,10 @@
        "      <td>201201</td>\n",
        "      <td>38</td>\n",
        "      <td>23290</td>\n",
+       "      <td>property-crime</td>\n",
        "      <td>346</td>\n",
        "      <td>203062</td>\n",
        "      <td>200100</td>\n",
-       "      <td>6</td>\n",
        "      <td>...</td>\n",
        "      <td>41</td>\n",
        "      <td>72</td>\n",
@@ -2905,10 +2905,10 @@
        "      <td>201201</td>\n",
        "      <td>38</td>\n",
        "      <td>23290</td>\n",
+       "      <td>violent-crime</td>\n",
        "      <td>346</td>\n",
        "      <td>203062</td>\n",
        "      <td>200100</td>\n",
-       "      <td>6</td>\n",
        "      <td>...</td>\n",
        "      <td>41</td>\n",
        "      <td>72</td>\n",
@@ -2929,10 +2929,10 @@
        "      <td>237297</td>\n",
        "      <td>314</td>\n",
        "      <td>32114</td>\n",
+       "      <td>property-crime</td>\n",
        "      <td>267</td>\n",
        "      <td>222170</td>\n",
        "      <td>228420</td>\n",
-       "      <td>15</td>\n",
        "      <td>...</td>\n",
        "      <td>112</td>\n",
        "      <td>29</td>\n",
@@ -2953,10 +2953,10 @@
        "      <td>237297</td>\n",
        "      <td>314</td>\n",
        "      <td>32114</td>\n",
+       "      <td>violent-crime</td>\n",
        "      <td>267</td>\n",
        "      <td>222170</td>\n",
        "      <td>228420</td>\n",
-       "      <td>15</td>\n",
        "      <td>...</td>\n",
        "      <td>112</td>\n",
        "      <td>29</td>\n",
@@ -2977,10 +2977,10 @@
        "      <td>237297</td>\n",
        "      <td>314</td>\n",
        "      <td>32114</td>\n",
+       "      <td>property-crime</td>\n",
        "      <td>267</td>\n",
        "      <td>222170</td>\n",
        "      <td>228420</td>\n",
-       "      <td>15</td>\n",
        "      <td>...</td>\n",
        "      <td>112</td>\n",
        "      <td>29</td>\n",
@@ -2995,16 +2995,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>5 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      STATE  CODE  COUNTY  POPULATION  DENSITY  MEDIAN INCOME  \\\n",
-       "0   Arizona  4027    Yuma      201201       38          23290   \n",
-       "1   Arizona  4027    Yuma      201201       38          23290   \n",
-       "2  Arkansas  5007  Benton      237297      314          32114   \n",
-       "3  Arkansas  5007  Benton      237297      314          32114   \n",
-       "4  Arkansas  5007  Benton      237297      314          32114   \n",
+       "      STATE  CODE  COUNTY  POPULATION  DENSITY  MEDIAN INCOME      CRIME TYPE  \\\n",
+       "0   Arizona  4027    Yuma      201201       38          23290  property-crime   \n",
+       "1   Arizona  4027    Yuma      201201       38          23290   violent-crime   \n",
+       "2  Arkansas  5007  Benton      237297      314          32114  property-crime   \n",
+       "3  Arkansas  5007  Benton      237297      314          32114   violent-crime   \n",
+       "4  Arkansas  5007  Benton      237297      314          32114  property-crime   \n",
        "\n",
        "   CRIME RATE PER 100k  COUNTY POP - AGENCY REPORTING ARRESTS  \\\n",
        "0                  346                                 203062   \n",
@@ -3013,31 +3013,24 @@
        "3                  267                                 222170   \n",
        "4                  267                                 222170   \n",
        "\n",
-       "   COUNTY POP - AGENCY REPORTING CRIME  # COUNTY AGENCY REPORTING ARREST  ...  \\\n",
-       "0                               200100                                 6  ...   \n",
-       "1                               200100                                 6  ...   \n",
-       "2                               228420                                15  ...   \n",
-       "3                               228420                                15  ...   \n",
-       "4                               228420                                15  ...   \n",
+       "   COUNTY POP - AGENCY REPORTING CRIME  ...  RAPE  ROBBERY  AGASSLT  BURGLRY  \\\n",
+       "0                               200100  ...    41       72      576     1567   \n",
+       "1                               200100  ...    41       72      576     1567   \n",
+       "2                               228420  ...   112       29      490     1214   \n",
+       "3                               228420  ...   112       29      490     1214   \n",
+       "4                               228420  ...   112       29      490     1214   \n",
        "\n",
-       "   RAPE  ROBBERY  AGASSLT  BURGLRY  LARCENY  MVTHEFT  ARSON  LATITUDE  \\\n",
-       "0    41       72      576     1567     3078      394     45        33   \n",
-       "1    41       72      576     1567     3078      394     45        33   \n",
-       "2   112       29      490     1214     3461      176     22        36   \n",
-       "3   112       29      490     1214     3461      176     22        36   \n",
-       "4   112       29      490     1214     3461      176     22        36   \n",
+       "   LARCENY  MVTHEFT  ARSON  LATITUDE  LONGITUDE     POP  \n",
+       "0     3078      394     45        33       -115  207534  \n",
+       "1     3078      394     45        33       -115  207534  \n",
+       "2     3461      176     22        36        -94  266300  \n",
+       "3     3461      176     22        36        -94  266300  \n",
+       "4     3461      176     22        36        -94  266300  \n",
        "\n",
-       "   LONGITUDE     POP  \n",
-       "0       -115  207534  \n",
-       "1       -115  207534  \n",
-       "2        -94  266300  \n",
-       "3        -94  266300  \n",
-       "4        -94  266300  \n",
-       "\n",
-       "[5 rows x 35 columns]"
+       "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3049,7 +3042,7 @@
     "\n",
     "#collist = Final_Crime_df.columns.tolist()\n",
     "#collist\n",
-    "Column_Order = [\"STATE\", \"CODE\", \"COUNTY\", \"POPULATION\", \"DENSITY\", \"MEDIAN INCOME\", \"CRIME RATE PER 100k\", \"COUNTY POP - AGENCY REPORTING ARRESTS\", \"COUNTY POP - AGENCY REPORTING CRIME\", \"# COUNTY AGENCY REPORTING ARREST\",\" # COUNTY AGENCY REPORTING CRIME\", \"TOTAL CRIMES\", \"IDNO\", \"age 0-9\", \"age 10-19\", \"age 20-29\", \"age 30-39\", \"age 40-49\", \"age 50-59\", \"age 60-69\", \"age 70-79\", \"age 80-89\", \"age 90-Older\", \"AGE \", \"MURDER\", \"RAPE\", \"ROBBERY\", \"AGASSLT\", \"BURGLRY\", \"LARCENY\", \"MVTHEFT\", \"ARSON\", \"LATITUDE\", \"LONGITUDE\", \"POP\"]\n",
+    "Column_Order = [\"STATE\", \"CODE\", \"COUNTY\", \"POPULATION\", \"DENSITY\", \"MEDIAN INCOME\", \"CRIME TYPE\", \"CRIME RATE PER 100k\", \"COUNTY POP - AGENCY REPORTING ARRESTS\", \"COUNTY POP - AGENCY REPORTING CRIME\", \"# COUNTY AGENCY REPORTING ARREST\",\" # COUNTY AGENCY REPORTING CRIME\", \"TOTAL CRIMES\", \"IDNO\", \"age 0-9\", \"age 10-19\", \"age 20-29\", \"age 30-39\", \"age 40-49\", \"age 50-59\", \"age 60-69\", \"age 70-79\", \"age 80-89\", \"age 90-Older\", \"AGE \", \"MURDER\", \"RAPE\", \"ROBBERY\", \"AGASSLT\", \"BURGLRY\", \"LARCENY\", \"MVTHEFT\", \"ARSON\", \"LATITUDE\", \"LONGITUDE\", \"POP\"]\n",
     "Final_Crime_df = Final_Crime_df.reindex(columns=Column_Order)\n",
     "\n",
     "Final_Crime_df[\"POPULATION\"] = Final_Crime_df[\"POPULATION\"].apply(\"int64\")\n",
