added totals to bottom of data

--- a/Project_1_Final.ipynb
+++ b/Project_1_Final.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Project # 1 Jupyter Notebook\n",
     "# Created by Melinda Eudy, Cameron Farquhar, Markita Francis, Luis Rojas, Kelly Rose.\n",
-    "# Project: 2017 Crime Data Used from several resources, UCR Crime Rates by County, US Census, and......."
+    "# Project: 2017 Crime Data Used from several resources, UCR Crime Rates by County, US Census, and BJ Crime"
    ]
   },
   {
@@ -3064,10 +3064,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total # of Murders: 21430.0\n",
+      "Total # of Rapes: 111804.0\n",
+      "Total # of Robery: 378973.0\n",
+      "Total # of Assault: 889747.0\n",
+      "Total # of Burglary: 2497392.0\n",
+      "Total # of Larceny: 6871293.0\n",
+      "Total # of Motor Vechicle Theft: 996269.0\n",
+      "Total # of Arson: 75113.0\n",
+      "Total number of crimes: 11842021.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "Murder = Final_Crime_df[\"MURDER\"].sum()\n",
+    "Rape = Final_Crime_df[\"RAPE\"].sum()\n",
+    "Robbery = Final_Crime_df[\"ROBBERY\"].sum()\n",
+    "Assault = Final_Crime_df[\"AGASSLT\"].sum()\n",
+    "Burglary = Final_Crime_df[\"BURGLRY\"].sum()\n",
+    "Larceny = Final_Crime_df[\"LARCENY\"].sum()\n",
+    "Mvtheft = Final_Crime_df[\"MVTHEFT\"].sum()\n",
+    "Arson = Final_Crime_df[\"ARSON\"].sum()\n",
+    "total = Murder + Rape + Robbery + Assault + Burglary + Larceny + Mvtheft + Arson\n",
+    "print(f\"Total # of Murders: {Murder}\")\n",
+    "print(f\"Total # of Rapes: {Rape}\")\n",
+    "print(f\"Total # of Robery: {Robery}\")\n",
+    "print(f\"Total # of Assault: {Assault}\")\n",
+    "print(f\"Total # of Burglary: {Burglary}\")\n",
+    "print(f\"Total # of Larceny: {Larceny}\")\n",
+    "print(f\"Total # of Motor Vechicle Theft: {Mvtheft}\")\n",
+    "print(f\"Total # of Arson: {Arson}\")\n",
+    "print(f\"Total number of crimes: {total}\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
